<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <TextView
        style="@style/mainTitle"
        android:text="@string/main_text_website_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_website"
        style="@style/editWebsiteContainer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_website_url"
            style="@style/editWebsite"
            android:hint="@string/main_edit_website_hint"
            android:text="@string/default_website"/>

    </android.support.design.widget.TextInputLayout>

</merge>