<resources>
    <string name="app_name">LinkFinder</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>

    <string name="main_edit_website_hint">Website</string>
    <string name="main_text_website_title">Enter website to crawl!</string>
    <string name="default_website">http://www.visual-engin.com</string>

    <!-- Error strings -->
    <string name="error_website_empty">Website url cannot be empty</string>
    <string name="error_website_wrong_format">Website url not valid</string>
    <string name="error_main_no_links_found">No links found!</string>
    <string name="error_no_internet">No internet connection available</string>
    <string name="error_timeout">Cannot connect to website</string>

    <!-- Link list -->
    <string name="link_list_img_description">Indicates wether the link is http or https</string>
    <string name="link_list_subtitle_format">%d links have been found!</string>
</resources>
